<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CryptoCompare</string>
    <string name="action_settings">Settings</string>
    <string name="dis">""</string>
    <string name="about">© AnDi 2017</string>
     <string name="info">Latest exchange rate for CryptoCurrencies from CryptoCompare public Api
                         in Bitcoin(BTC) and Ethereum(ETH). </string>
    <string name="aboutBtn">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="ethAdd">ADD</string>
    <string name="Bitcoin">BitCoin(BTC)</string>
    <string name="Eth">Ethereum(ETH)</string>
    <string name="enter">Enter Value for Conversion</string>
    <string name="results">Your Conversion Results!</string>
    <string name="hint">Loading</string>
    <string name="welcometo">Welcome to CryptoCompare</string>
    <string name="welcomeinfo">Get the latest exchange rate between cryptocurrencies BTC and ETH and 20 world currencies</string>
    <string name="tutorialtit">How to use.</string>
    <string name="tutorial">Select a base currency(ETH or BTC).From the drop down menu select the world currency you would like to convert
        to.Click the Add button.Finally click on the card created with the selected world currency and Enter value!</string>
    <string name="email">andicreations94@gmail.com</string>
    
</resources>
