<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#000000"
    >

    <TextView
        android:id="@+id/splashText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="30sp" />
    
     <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashText"
        android:layout_centerHorizontal="true"
        android:text="@string/info"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:contentDescription="@string/dis"
        android:gravity="center"
        android:src="@drawable/oc_icon" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/about"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/imgLogo"
        android:layout_above="@+id/email"
        android:layout_marginTop="32dp"
        android:text="@string/version"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/email"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>
