<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3.20"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="29dp"
        android:text="@string/welcometo"
        android:textColor="#ffffff"
        android:textSize="27sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/dis"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/oc_icon" />
         </LinearLayout>
 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/welcomeinfo"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

</LinearLayout>
